--- a/face-scanning/package.json
+++ b/face-scanning/package.json
@@ -12,6 +12,7 @@
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-webcam": "^7.2.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
